src/objects/JobApplicationDemo__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Total_Rating__c  /  Number_of_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CandidateDemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>CandidateDemo__c</referenceTo>
        <relationshipLabel>JobApplications</relationshipLabel>
        <relationshipName>JobApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Reviews</label>
        <summaryForeignKey>ReviewDemo__c.JobApplicationDemo__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PositionDemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>PositionDemo__c</referenceTo>
        <relationshipLabel>JobApplications</relationshipLabel>
        <relationshipName>JobApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend an Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>ReviewDemo__c.Rating__c</summarizedField>
        <summaryForeignKey>ReviewDemo__c.JobApplicationDemo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>JobApplicationDemo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobApplications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>